--- a/proj/README
+++ b/proj/README
@@ -1,4 +1,4 @@
-   -------------------- P R O J . 4 --------------------
+    -------------------- P R O J . 4 --------------------
 
 This is Release 4.4 of cartographic projection software.
 
@@ -33,19 +33,16 @@ writable by the installer.
 
 After executing configure, execute:
 
-	make
-        make install
+	sh install
 
-The install target will create, if necessary, all required sub-directories.
+The install script will create, if necessary, all required sub-
+directories.
 
 Windows Build
 -------------
 
 PROJ.4 can be built with Microsoft Visual C/C++ using the makefile.vc
-in the src directory.  First edit the PROJ\SRC\makefile.vc and modify
-the PROJ_LIB_DIR value at the top to point to the NAD subdirectory 
-of wherever you put the PROJ tree.  If you unpacked it as C:\PROJ it
-can remain unchanged.  The use the makefile.vc to build the software:
+in the src directory. 
 
 eg. 
 C:\> cd proj\src
