--- a/proj/man/man1/cs2cs.1
+++ b/proj/man/man1/cs2cs.1
@@ -86,6 +86,22 @@ expected input from longitude-latitude or x-y to latitude-longitude or y-x.
 This options reverses the order of the
 output from x-y or longitude-latitude to y-x or latitude-longitude.
 .TP
+.BI \-m " mult"
+The cartesian data may be scaled by the
+.I mult
+parameter.
+When processing data in a forward projection mode the
+cartesian output values are multiplied by
+.I mult
+otherwise the input cartesian values are divided by
+.I mult
+before inverse projection.
+If the first two characters of
+.I mult
+are 1/ or 1: then the reciprocal value of
+.I mult
+is employed.
+.TP
 .BI \-f " format"
 .I Format
 is a
@@ -114,6 +130,11 @@ used by the program to be printed prior to input data.
 Should not be used with the
 .B \-T
 option.
+.TP
+.B \-V
+This option causes an expanded annotated listing of the characteristics
+of the projected point.
+.B -v is implied with this option.
 .PP
 The
 .B +args
